--- a/pom.xml
+++ b/pom.xml
@@ -52,4 +52,8 @@
             <version>1.5.0</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>QAPlugin-module-ezrankspro</finalName>
+    </build>
 </project>
